Fix z-index issue where numbers go over header

--- a/src/_includes/less/styles/_mb-comingsoon.less
+++ b/src/_includes/less/styles/_mb-comingsoon.less
@@ -114,7 +114,7 @@
             {
                 top: -100%;
                 //.transition(top 0.6s);
-                z-index: 100;
+                z-index: 25;
             }
         }
 
